Added challenge and solution without bonus task, I will take that later

--- a/chatgpt/001_flask_webserver_and_postgresql/solution/Dockerfile
+++ b/chatgpt/001_flask_webserver_and_postgresql/solution/Dockerfile
@@ -1,3 +1,9 @@
 FROM python:3.12.5-slim-bookworm
 
+RUN pip install flask sqlalchemy pg8000 flask_restful
 
+COPY ./app /app
+
+WORKDIR /app
+
+ENTRYPOINT [ "python", "-m", "flask", "run", "--host=0.0.0.0" ]
