--- a/chatgpt/001_flask_webserver_and_postgresql/solution/docker-compose.yml
+++ b/chatgpt/001_flask_webserver_and_postgresql/solution/docker-compose.yml
@@ -1,19 +1,23 @@
 services:
-  frontend:
+  proxy:
     image: nginx:1.27.1-alpine-slim
+    restart: unless-stopped
     ports:
       - 80:80
-      # - 443:443
-    environment:
-      - NGINX_HOST=usermanager.local
-      - NGINX_PORT=80
+      # - 443:443    # This is needed for SSL but will not be set up this time
+    volumes:
+      - ./configs/nginx:/etc/nginx/conf.d
     networks:
       - challenge001
 
-  backend:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
     networks:
       - challenge001
 
@@ -21,17 +25,25 @@ services:
     image: postgres:16.4-bookworm
     restart: unless-stopped
     shm_size: 128mb
+    ports:
+      - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      timeout: 60s
+      interval: 30s
+      retries: 5
+      start_period: 80s
     environment:
+      POSTGRES_USER: user
       POSTGRES_PASSWORD: myrandompassword123
       POSTGRES_DB: usermanager
+      POSTGRES_PORT: 5432
     networks:
       - challenge001
 
   adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+    image: adminer:4.8.1-fastcgi
+    restart: unless-stopped
     networks:
       - challenge001
 
