Started working on a web frontend

--- a/chatgpt/001_flask_webserver_and_postgresql/solution/docker/api/Dockerfile
+++ b/chatgpt/001_flask_webserver_and_postgresql/solution/docker/api/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.12.5-slim-bookworm
 
 RUN pip install flask sqlalchemy pg8000 flask_restful
 
-COPY ./app /app
+COPY ./api /api
 
-WORKDIR /app
+WORKDIR /api
 
 ENTRYPOINT [ "python", "-m", "flask", "run", "--host=0.0.0.0" ]
