--- a/chatgpt/001_flask_webserver_and_postgresql/solution/docker-compose.yml
+++ b/chatgpt/001_flask_webserver_and_postgresql/solution/docker-compose.yml
@@ -7,13 +7,22 @@ services:
       # - 443:443    # This is needed for SSL but will not be set up this time
     volumes:
       - ./configs/nginx:/etc/nginx/conf.d
+      - ./web:/web
+    networks:
+      - challenge001
+
+  web:
+    build:
+      context: .
+      dockerfile: docker/web/Dockerfile
+    restart: unless-stopped
     networks:
       - challenge001
 
   api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: docker/api/Dockerfile
     depends_on:
       db:
         condition: service_healthy
